--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 					<p class="fragment">Сколько веток нужно для разработки</p>
 					<p class="fragment">Зачем разделять дев и прод окружения</p>
 					<p class="fragment">Что такое веб сервер</p>
-					<p class="fragment">Что такое днс</p>
+					<p class="fragment">Что такое DNS</p>
 					<p class="fragment">Что такое "сборка в облаке"</p>
 					<p class="fragment">Что такое ci/cd</p>
 					<p class="fragment">Что такое докер</p>
-					<p class="fragment">Что такое линетр</p>
+					<p class="fragment">Что такое линтер</p>
 				</section>
 			</section>
 			<section>
